--- a/style2.css
+++ b/style2.css
@@ -3,10 +3,12 @@ h1 { text-align: center}
 h2 { color:#FFE20A; font-family: Monserrat; text-align: center; size: 8}
 h3 { color: #FFE20A; font-family: Monserrat; text-align: center; size: 8}
 
-#ty{ text-align:center; height: 40%;
-    width: 50% }
-#josh{ text-align:center; height: 50%;
-    width: 50% }
+#ty{ margin-left:auto; margin-right: auto; display: block; height: 30%}
+#josh{ margin-left:auto; margin-right: auto; display:block; height: 40%}
     p {font-family: Times}     
-    head{background:#525D4C}
-body{background: #525D4C}
+    head{background:#797746}
+    body{background:#797746}
+    .nav-link{color:#FFE20A}
+.nav-link active{color:#FFE20A}
+#cabecera{ height: 80%;
+    width: 80%; margin-left:auto; margin-right: auto; display:block}
