--- a/style3.css
+++ b/style3.css
@@ -1,11 +1,13 @@
 h2 { color: #FFE20A; font-family: Monserrat; text-align: center; size: 8}
-h3 { color:#FFE20A; font-family: Monserrat; text-align: center; size: 8}
-h4 { color: #FFE20A; font-family: Monserrat; text-align: center; size: 8}
-h5 { color: #FFE20A; font-family: Monserrat; text-align: center; size: 8}
-#logo1{height: 30%;
-    width: 30%}
-#logo2{height: 20%;
-    width: 30%}
+
+#logo1{height: 30%; margin-left:auto; margin-right: auto; display:block}
+#logo2{height: 12%; margin-left:auto; margin-right: auto; display:block}
 p {font-family: Times}       
-head{background:#525D4C}
-body{background: #525D4C}
+head{background:#797746}
+body{background:#797746}
+.nav-link{color:#FFE20A}
+.nav-link active{color:#FFE20A}
+#cabecera{ height: 80%;
+    width: 80%; margin-left:auto; margin-right: auto; display:block}
+#piefoto1{ text-align: center} 
+#piefoto2{ text-align: center}   
