--- a/style5.css
+++ b/style5.css
@@ -6,9 +6,5 @@ h2 { color: #FFE20A; font-family: Monserrat; text-align: center; size: 8}
 .nav-link active{color:#FFE20A}
 #cabecera{ height: 80%;
     width: 80%; margin-left:auto; margin-right: auto; display:block}
-
-    #nico{text-align: center}
-    #jumpsuit{margin-left:auto; margin-right: auto; display:block}
-    #levitate{}
-    #myblood{}
-    #chlorine{}
+    video{margin-left:auto; margin-right: auto; display:block}
+   
